<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_search">

    <fragment
        android:id="@+id/navigation_search"
        android:name="com.lemon.vy3000.ui.fragment.search.SearchFragment"
        android:label="@string/title_search"
        tools:layout="@layout/fragment_search" />

    <fragment
        android:id="@+id/navigation_ruter"
        android:name="com.lemon.vy3000.ui.fragment.ruter.RuterFragment"
        android:label="@string/title_ruter"
        tools:layout="@layout/fragment_ruter" />

    <fragment
        android:id="@+id/navigation_tickets"
        android:name="com.lemon.vy3000.ui.fragment.tickets.TicketsFragment"
        android:label="@string/title_tickets"
        tools:layout="@layout/fragment_tickets" />

    <fragment
        android:id="@+id/navigation_favourites"
        android:name="com.lemon.vy3000.ui.fragment.favourites.FavouritesFragment"
        android:label="@string/title_favourites"
        tools:layout="@layout/fragment_favourites" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.lemon.vy3000.ui.fragment.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />

</navigation>